Typed update